// enum untuk menyimpan status booking, agar status tidak rawan typo dibanding pakai string biasa
public enum BookingStatus {
    PENDING,
    CONFIRMED,
    CHECKED_IN,
    CANCELLED,
    NO_SHOW,
    COMPLETED
}